deployments/overlays/production/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: eqloginoidc
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`xev.teraptra.net`) && PathPrefix(`/login`)
      kind: Rule
      services:
        - name: eqloginoidc
          port: 8443
      middlewares:
        - name: strip-prefix-login
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: strip-prefix-login
spec:
  stripPrefix:
    prefixes:
      - /login
